package com.viscontti.challeng002;

import org.springframework.context.annotation.ComponentScan;
import org.springframework.context.annotation.Configuration;

@Configuration
@ComponentScan(basePackages={"com.viscontti.challeng002"})
public class AppConfig {
}
